<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="order_title">Faça seu pedido!</string>
    <string name="order_subtitle">Monte seu hambúrguer com os adicionais que preferir.</string>
    <string name="hint_client_name">Nome</string>
    <string name="extras_title">Adicionais</string>
    <string name="extra_bacon">Bacon (+R$ 2)</string>
    <string name="extra_cheese">Queijo (+R$ 2)</string>
    <string name="extra_onion_rings">Onion Rings (+R$ 3)</string>
    <string name="quantity_title">Quantidade</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="default_quantity">0</string>
    <string name="order_summary_title">Resumo do pedido</string>
    <string name="default_summary">Clique em enviar pedido para gerar o resumo.</string>
    <string name="default_total_price">R$ 0</string>
    <string name="place_order_button">Enviar pedido</string>
    <string name="error_missing_name">Informe o nome do cliente.</string>
    <string name="error_missing_quantity">Selecione pelo menos um hambúrguer.</string>
    <string name="email_subject_template">Pedido de %1$s</string>
    <string name="email_chooser_title">Enviar pedido por e-mail</string>
    <string name="error_missing_email_app">Nenhum aplicativo de e-mail foi encontrado.</string>
    <string name="banner_logo_description">Logo da HamburgueriaZ em destaque</string>
</resources>
